--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "owntube",
   "version": "1.0.0",
   "description": "Learning Backend",
+  "type": "module",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon scr/index.js"
   },
   "repository": {
     "type": "git",
@@ -14,6 +15,9 @@
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/jadhavng/backend-repo/issues"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.4"
   },
   "homepage": "https://github.com/jadhavng/backend-repo#readme"
 }
