--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon scr/index.js"
+    "dev": "nodemon -r dotenv/config --experimental-json-modules src/index.js"
   },
   "repository": {
     "type": "git",
@@ -20,5 +20,10 @@
     "nodemon": "^3.1.4",
     "prettier": "^3.3.2"
   },
-  "homepage": "https://github.com/jadhavng/backend-repo#readme"
+  "homepage": "https://github.com/jadhavng/backend-repo#readme",
+  "dependencies": {
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
+    "mongoose": "^8.4.4"
+  }
 }
